<resources>
    <string name="app_name">Amal</string>
    <string name="take_picture">Take Picture</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="delete">Delete</string>
    <string name="title_activity_main">Amal</string>
    <string name="title_assess">Assess</string>
    <string name="title_capture">Capture</string>
    <string name="title_report">Report</string>
    <string name="hello_assess_fragment">Hello assess</string>
    <string name="hello_report_fragment">Hello report</string>
    <string name="hello_capture_fragment">Hello capture</string>
    <string name="image_thumb">Image Thumb</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="overall_area">Overall Area</string>
    <string name="site_building">Site / Building</string>
    <string name="object">Object</string>
    <string name="condition">Condition</string>
    <string name="assess">Assess</string>
    <string name="hazards">Hazards</string>
    <string name="safety_personal_hazard">Safety/Personal Hazard</string>
    <string name="intervention_recommended">Intervention Recommended</string>
    <string name="notes">Notes</string>
    <string name="new_report">New</string>
    <string name="assessor_email">Assessor Email</string>
    <string name="title">Title</string>
    <string name="upload">Publish</string>
    <string name="report_thumbnail">Report Thumbnail</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="settings_button">Settings Button</string>
    <string name="settings">Settings</string>
    <string name="update_location">Update Location</string>
    <string name="importString">Import</string>
    <string name="cancel">Cancel</string>
    <string name="publish_anonymously">Publish Anonymously</string>
    <string name="no_publish_anonymously">You must be logged in to publish this report.</string>
    <string name="log_in">Log in</string>
    <string name="icon">icon</string>
    <string name="agree_title">By using this application, you agree to our</string>
    <string name="tos"><u>Terms of Service</u></string>
    <string name="privacy"><u>Privacy Policy</u></string>
    <string name="and">&amp;</string>
    <string name="caution">CAUTION</string>
    <string name="never_asses">Never assess a site that has not been cleared by first responders.</string>
    <string name="log_out">Log out</string>
    <string name="signed_in_as">Signed in as</string>
    <string name="submit">Submit</string>
    <string name="gallery_empty_text">No photos to show</string>
    <string name="reports_empty_text">No reports to show</string>
    <string name="passphrase">Passphrase</string>
    <string name="gallery_empty_state_text">As you take photos, the gallery on this page will display them. No reports or assessments can be done until there are photos to assess/report.</string>
    <string name="reports_empty_state_text">To create a report, first take some photos, then tap the add (plus) button at the bottom of this screen.</string>
    <string name="flash">Flash</string>
    <string name="no_camera_permission">The photo capture feature is not available when the application does not have camera permissions</string>
    <string name="database_target">Select Alternate Database Target</string>
    <string name="enter_title_here">Enter title here</string>
    <string name="save_draft">Save Draft</string>
    <string name="delete_draft">Delete Draft</string>
    <string name="would_you_like_to_save_this_as_a_draft">Would you like to save this as a draft?</string>
    <string name="publish">Publish</string>
    <string name="metered_connection_dialog_text">You are on a connection that might be expensive to upload on. Would you like to continue to upload, or would you prefer to save the report as a draft so you can upload it later on a different connection?</string>
    <string name="upload_now">Upload Now</string>
<!--    <string name="sending_to_db">Sending to %s database</string>-->
    <string name="batch_assess_header">Assessing %s images</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">Image</string>
    <string name="selected_checkbox">Selected checkbox</string>
    <string name="coordinates">Coordinates</string>
    <string name="edit_location">Edit Location</string>
    <string name="publish_date">Publish Date</string>
    <string name="sending_to_amal">Sending to Amal</string>
    <string name="web_report">Web Report</string>
    <string name="pdf_report">PDF Report</string>
    <string name="done">Done</string>
    <string name="firebase_default_db">Firebase (Default)</string>
    <string name="sending_to_firebase">Sending to: Firebase</string>
    <string name="sending_to_db">Sending to: %1$s</string>
    <string name="save_updated_draft">Save Updated Draft</string>
    <string name="sending_to_not_selected">Select a database target</string>
    <string name="no_rest_db_access">Rest database target has not been unlocked</string>
    <string name="sending_to_unknown">Database could not be identified.  Sending to unknown database. Proceed with caution.</string>
</resources>
