<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textAlignment="center">

        <TextView
            android:id="@+id/newReportBottomDialogTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/would_you_like_to_save_this_as_a_draft"
            />
        <Button
            android:id="@+id/delete_draft"
            android:background="@color/primaryColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="24sp"
            android:text="@string/delete_draft"
            />
        <Button
            android:id="@+id/save_updated_draft"
            android:background="@color/primaryColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="24sp"
            android:text="@string/save_draft"
            />
        <Button
            android:id="@+id/cancel_draft"
            android:background="@color/primaryColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="24sp"
            android:text="@string/cancel"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>