<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:labelFor="@id/titleField"
            />
        <EditText
            android:id="@+id/titleField"
            android:layout_height="wrap_content"
            android:hint="@string/enter_title_here"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:layout_marginBottom="8dp">
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Publish Date"
            android:labelFor="@id/dateLabel"
            />
        <TextView
            android:id="@+id/dateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            />

        <TextView
            android:id="@+id/sendingToAmal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sending to Amal"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/dbChooser"
                android:text="@string/database_target"
                />
            <RadioGroup
                android:id="@+id/dbChooser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assessor_email"
            android:labelFor="@id/emailField"
            />
        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="youremail@domain.com"
            />
        <Button
            android:id="@+id/publishReportButton"
            android:background="@color/primaryColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="@string/publish"
            />




    </LinearLayout>
</ScrollView>
